--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -294,7 +294,6 @@ body header {
 }
 
 .today-cell {
-	
 }
 
 .current-month-cell {
@@ -314,18 +313,14 @@ body header {
 	}
 
 .other-month-cell {
-	/*border: 2px solid #ddd;
-	background: #F7F7F7;*/
-	/*background-color: #eee;*/
-	/*background: #444444;*/
-	/*background: #5C5C5C;*/
 	position: relative;
-	/*border: 2px solid rgb(184, 184, 184);
-	background: #F0F0F0;*/
-	box-shadow: rgb(221, 221, 221) 0px 3px 5px;
+	border: 1px solid white;
+	border-bottom-right-radius: 12px;
+	border-top-left-radius: 12px;
+	background: rgba(223, 240, 255, 0.7);
+	/*box-shadow: rgb(221, 221, 221) 0px 3px 5px;
 	border: 2px solid #ddd;
-	background: #eee;
-	/*border: 1px solid rgb(212, 241, 93);*/
+	background: #eee;*/
 }
 
 	.other-month-cell span {
@@ -686,7 +681,7 @@ background:rgb(115, 233, 162);
 	border: 1px solid rgb(216, 255, 232);
 	margin-top: 163px;
 	height: 200px;
-	box-shadow: 0px 0px 30px -6px rgb(111, 111, 111)
+	box-shadow: 0px 0px 30px -6px rgb(111, 111, 111);
 }
 
 
