--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 	<script src="~/Scripts/CalendarWidget/Slider/application.js"></script>
+	<script src="~/Scripts/JSModels/KKEventModel.js"></script>
 	<script src="~/Scripts/JSViewModels/CalendarViewModel.js" defer="defer"></script>
 
 </head>
