--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -191,15 +191,13 @@ body header {
 }
 
 #loginPageContainer {
-	margin-right: 8%;
-	float: right;
+	margin: 0 auto;
 	background: rgba(0,0,0,.04);
-	display: inline-block;
 	width: 50%;
 	padding-top: 30px;
 	color: rgb(104,104,104);
 	/*border: 1px solid rgb(216, 255, 232);*/
-	margin-top: 150px;
+	margin-top: 40px;
 	border: 1px solid rgb(247, 247, 247);
 }
 
@@ -214,9 +212,9 @@ body header {
 	display: block;
 	border-top: 1px solid #DADADA;
 	border-bottom: 1px solid white;
-	margin-top: 150px;
 	width: 50%;
-	margin-left: 20px;
+	margin: 0 auto;
+	margin-top: 40px;
 	padding: 10px;
 	color: rgb(104,104,104);
 	display: none;
@@ -384,12 +382,14 @@ body header {
 
 .menu-item {
 	border-top: 1px solid rgb(189, 189, 189);
-	/*background: rgba(0, 0, 0,.47);*/
-	/*box-shadow: 4px 2px 8px rgb(177, 177, 177);*/
+	background: rgba(214, 214, 214, 0.5);
+	box-shadow: 4px 2px 8px rgb(207, 207, 207);
+
 	height: 30px;
 	color: rgb(116, 116, 116);
 	font-size: 0.8em;
-	padding-left: 10px;
+	width: 95px;
+	text-align: center;
 }
 
 	.menu-item span {
@@ -398,6 +398,7 @@ body header {
 	}
 
 .menu-item-container {
+	display: inline-block;
 	margin: 2px;
 }
 
@@ -672,15 +673,17 @@ background:rgb(115, 233, 162);
 	color: rgb(87, 87, 87);
 }
 
+#lobbyLogo {
+	position: static !important;
+}
+
 .lobby-profile-menu {
-	margin-right: 8%;
-	float: right;
 	background: rgba(0,0,0,.04);
-	display: inline-block;
 	width: 50%;
 	color: rgb(104,104,104);
 	border: 1px solid rgb(216, 255, 232);
-	margin-top: 163px;
+	margin: 0 auto;
+	margin-top: 40px;
 	height: 200px;
 	box-shadow: 0px 0px 30px -6px rgb(111, 111, 111);
 }
@@ -796,7 +799,7 @@ wydarzenia-tab {
 }
 
 .zajecia-border-tab {
-	border-bottom: 10px solid rgb(187, 255, 241);
+	border-bottom: 10px solid rgb(136, 245, 222);
 }
 
 .slide-item-details {
@@ -847,14 +850,14 @@ wydarzenia-tab {
 	text-decoration: underline;
 }
 
-#lobbyEventSummaryMenu {
-	margin-top: 150px;
-	width: 30%;
-	display: inline-block;
-	margin-left: 8%;
+#lobbyEventSummary {	
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 40px;
 	background: rgba(0, 0, 0, 0.04);
 	padding: 10px;
 	border: 1px solid rgb(240, 240, 240);
+	overflow: hidden;
 }
 
 .current-month-name-calendar {
@@ -1005,7 +1008,7 @@ MEDIA QUERIES
 */
 
 @media screen and (max-width: 1350px) {
-	#lobby-logo {
+	#lobbyLogo {
 		display: none;
 	}
 }
